# jsp-instance-utils

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.md  index.rst  instances-table.md  usage.md
docs/source/examples/: JSSEnv_example.ipynb  example-gallery.md  graph-jsp-env_example.ipynb  graph-matrix-jsp-env_example.ipynb  or-tools_example.ipynb
docs/source/related/: kemmerling.md  related-projects.md  ruby.md  weise.md
docs/source/source-code-docs/: instance-download.md  instance-generator.md  or-tools-solver.md  parser.md  source-code.md
examples/: JSSEnv_example.py  example-ft06.py  example-ta01.py  graph-jsp-env_example.py  graph-matrix-jsp-env_example.py  or-tools_example.py
resources/: bibliography.bib
resources/jps_instance_details/: benchmark_details.json
src/_download_instances_to_project/: downloader.py  instance_details_downloader.py  python_file_writer.py
src/jsp_instance_utils/: instance_parser.py  instances.py  jsp_instance_generator.py  jsp_or_tools_solver.py
tests/: test_instance_generator.py  test_instance_parser.py  test_instances.py  test_or_tools_solver.py
