[metadata]
name = jsp_instance_utils
author = Alexander Nasuta
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    jsp_instance_utils
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
* = *.txt